--- a/sites/all/themes/ocha_basic/sass/hrinfo-custom/_search.scss
+++ b/sites/all/themes/ocha_basic/sass/hrinfo-custom/_search.scss
@@ -172,7 +172,7 @@
             margin-left: 0;
             line-height: 22px;
             color: black;
-            font-size: 0.8em;
+            //font-size: 0.8em;
             a {
               margin-right: 6px;
               display: inline-block;
