--- a/sites/all/themes/ocha_basic/sass/hrinfo-custom/cd/_cd-header.scss
+++ b/sites/all/themes/ocha_basic/sass/hrinfo-custom/cd/_cd-header.scss
@@ -12,22 +12,26 @@
   }
 }
 
-//.cd-header {
+.cd-header {
+  margin-bottom: 40px;
+
+  .og-context & {
+    margin-bottom: 0;
+  }
+}
+
+//.sidebar-first #main-content {
+//  margin-top: 40px;
+//}
+//
+//.sidebar-first.og-context-node #main-content {
+//  margin-top: 0;
+//}
+//
+//.no-sidebars .region-content {
+//  margin-top: 40px;
+//}
+//
+//.region-content {
 //  margin-bottom: 40px;
 //}
-
-.sidebar-first #main-content {
-  margin-top: 40px;
-}
-
-.sidebar-first.og-context-node #main-content {
-  margin-top: 0;
-}
-
-.no-sidebars .region-content {
-  margin-top: 40px;
-}
-
-.region-content {
-  margin-bottom: 40px;
-}
